--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-django
-gunicorn
-django-heroku
+certifi==2019.6.16
+chardet==3.0.4
+idna==2.8
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+parso==0.3.4
+pylint==2.3.1
+PySDL2==0.9.4
+pyTelegramBotAPI==3.6.6
+requests==2.22.0
+six==1.12.0
+typed-ast==1.3.1
+urllib3==1.25.3
+wrapt==1.11.1
